(Still need tests for functions that need fixtures).

*****

Changed import format for utils, getting module rather than the
module's variables.  This fixes an issue with a monkeypatch testing
(constants were get from utils before runtime, .i.e., before monkey
patching).


*****  Tue Jan 15 23:32:15 CET 2019  *****

Added check at Bib.__init__() to count zero net braces.


*****  Thu Jan 17 00:20:11 CET 2019  *****

Tweaked bm.display_bibs(), cleaner trimming of ending newline.

*****

Added remove_duplicates() to bm.__all__.
Fixed bug, in bm.remove_duplicates() when there are no entries
without the field to check.

*****

Added conftest.py file with fixtures for pytest.
Added mock_input() fixture.
Implemented tests for bm.remove_duplicate() function.


*****  Fri Jan 18 00:22:30 CET 2019  *****

Implemented mock_init() fixture (which uses mock_home), to really
make sure that each test starts from sratch in isolation.

Implemented tests for bm.save(), bm.load(), and bm.export().


*****  Fri Jan 18 17:37:50 CET 2019  *****

Implemented test for bm.filter_field().

*****

Added exception to bm.remove_duplicate(), return immediately if
there are no entries with (non null) requested field.

*****

Resorted order fixtures in conftest.py.
Added entries fixture to define a list of entries.
Modified bibs fixture to inherit from entries fixture.
Added mock_prompt fixture to mock prompt_toolkit.prompt() function.

*****

Reshufled merge function in bib_manager.py (no real edits).

*****

Adapted test_bib_manager.py tests to use entries fixture when needed.
Implemented tests for bm.add_entries() function.

*****

Implemented tests for bm.merge() function.
Moved 'Merged ...' print statement to the very end of bm.merge().


*****  Sat Jan 19 14:25:35 CET 2019  *****

Updated docstrings and docs for search (in database).

*****

Implemented tests for bm.search() function.
This completes test_bib_manager.py (for now, need to think about
bm.edit()).

*****
