@@ -1,8 +1,12 @@
 language: python
+
 python:
-  - 3.6
+ - 3.6
+ - 3.7
+
 matrix:
   include:
+  - python: 3.6
   - python: 3.7
     sudo: required
     dist: xenial
